...
        android:gravity="center_vertical">
        <Button
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:text="@string/submit"
            android:layout_marginLeft="20dp"
            android:id="@+id/bSubmit"
            android:textSize="14dp"
            android:background="#FFBEBCB6"/>
    </LinearLayout>
</LinearLayout>
